# CED_schedule_Final_Branch2_---HIHH_Ultimate

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_retry.md  final_report.json  paper_extract.txt  paper_extract_clean.txt  retry_plan.json  scan_and_retry.py
build2/: ALL_BUILD.vcxproj  CED_Schedule.sln  CED_Schedule.vcxproj  CED_Schedule.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_local/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CED_Schedule.sln  CED_Schedule.vcxproj  CED_Schedule.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_profile/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CED_Schedule.sln  CED_Schedule.vcxproj  CED_Schedule.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
data/: Machines_3000.txt  Tasks_in_3000.txt  data_matrix_T200_E100_D300.txt  data_matrix_T50_E50_D150.txt
include/: CC_HIHH.h  GA_SLHH.h  Multimethod.h  Population.h  Problems.h  Rng.h  Workspace.h
past_results/: bestfit_seed1_10.csv  convergence_seed0_30_avg_every1.csv  convergence_seed1_10_avg_every50.csv  friedman_across_algos.csv  gen10000_ga_slhh_vs_cchihh_stats_every50.csv  gen10000_seed0_20_avg_every50.csv  results_cchihh_base_stable_seed1_10.csv  results_seed1_10.csv  run_base_seed1.txt  run_stable_seed1.txt  stat_tests_wilcoxon_friedman.csv  stat_tests_wilcoxon_friedman.txt  wilcoxon_vs_CCHIHH_stable.csv
results/: CCHIHH_base_seed1.txt  CCHIHH_base_seed2.txt  CCHIHH_base_seed5.txt  CCHIHH_base_seed6.txt  CCHIHH_base_seed7.txt  CCHIHH_base_seed8.txt  CCHIHH_base_seed9.txt  (+14 more)
src/: main.cpp  (+4 more)
(+837 files in other folders)
